@@ -434,6 +434,9 @@ Goto next slide
 .B r, R
 Reload current image. Useful for webcams.
 .TP 5
+.B w, W
+Size window to current image size.
+.TP 5
 .B h, H
 Pause the slideshow (only useful when using
 timed reloading or image changes)
