@@ -135,6 +135,7 @@ void feh_debug_print_winwid(winwidget winwid);
 winwidget winwidget_get_first_window_of_type(unsigned int type);
 void winwidget_reset_image(winwidget winwid);
 void winwidget_sanitise_offsets(winwidget winwid);
+void winwidget_size_to_image(winwidget winwid);
 
 extern int window_num;          /* For window list */
 extern winwidget *windows;      /* List of windows to loop though */
