@@ -1,4 +1,9 @@
-Thu Aug 16 23:07:33 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
+Sat Aug 18 19:15:22 2001  Tom Gilber <tom@linuxbrit.co.uk>
+
+	* Added, 'w, W' and a menu option to resize the window to the
+	current image dimensions.
+
+Thu Aug 16 23:07:33 2001  Tom Gilbert <tom@linuxbrit.co.uk>
 
 	* Added 'x' to close a window but not exit everything.
 
